cart fixes in routes and swagger
